fixed a little bug causing the navtray to be visible at incorrect times.

--- a/clientapp/src/components/NavMenu/NavMenu.module.css
+++ b/clientapp/src/components/NavMenu/NavMenu.module.css
@@ -7,3 +7,7 @@
     justify-content: space-between;
     /* overflow: hidden; */
 }
+
+.closed {
+    
+}
