--- a/clientapp/src/components/NavMenu/NavTray/NavTray.module.css
+++ b/clientapp/src/components/NavMenu/NavTray/NavTray.module.css
@@ -14,4 +14,5 @@
 
 .closed {
     transform: translateY(-20rem);
+    opacity: 0;
 }
